Pinterest button was off centered and fixed the layout

--- a/public/stylesheets/app/controller.css
+++ b/public/stylesheets/app/controller.css
@@ -181,6 +181,7 @@
 .show_animals .social{border-bottom: 1px #ccc dotted;margin-bottom: 15px;}
 .show_animals .social .text_label{width: 150px;font-weight: bold;line-height:20px;}
 .show_animals .social span{ display:block; float:left;height: 30px; line-height:30px; width: 90px; vertical-align:center; font-size: 12px;}
+.show_animals .social span.pinterest{line-height: 0px;}
 .show_animals .social:after{ content:"\0020"; display:block; height:0px; clear:both; visibility:hidden; overflow:hidden; }
 
 
